--- a/Contents/Resources/CodaCompletion.plist
+++ b/Contents/Resources/CodaCompletion.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>Name</key>
-	<string>Twig</string>
+	<string>Twig-HTML</string>
 	<key>Comments</key>
 	<dict>
 		<key>EndTag</key>
